Support fine-grained file splitting by row groups/stripes